--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,25 +15,11 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="0">
-     <widget class="QPushButton" name="mUpdateCharts">
-      <property name="text">
-       <string>Update charts</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="mLoadGamesToday">
-      <property name="text">
-       <string>Query for games</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QFrame" name="mListFrame">
       <property name="maximumSize">
        <size>
-        <width>300</width>
+        <width>320</width>
         <height>16777215</height>
        </size>
       </property>
@@ -55,15 +41,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="minimumSize">
-          <size>
-           <width>281</width>
-           <height>131</height>
-          </size>
-         </property>
          <property name="font">
           <font>
-           <pointsize>8</pointsize>
+           <pointsize>7</pointsize>
           </font>
          </property>
         </widget>
@@ -87,6 +67,20 @@
            <width>16777215</width>
            <height>16777215</height>
           </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="mLoadGamesToday">
+         <property name="text">
+          <string>Query for games</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="mUpdateCharts">
+         <property name="text">
+          <string>Update charts</string>
          </property>
         </widget>
        </item>
@@ -123,7 +117,7 @@
      <x>0</x>
      <y>0</y>
      <width>963</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
