--- a/liveresultanalysiscontainer.ui
+++ b/liveresultanalysiscontainer.ui
@@ -1,21 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>LiveResultAnalysisContainer</class>
  <widget class="QWidget" name="LiveResultAnalysisContainer">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>288</width>
+    <height>250</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout"/>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
